# prosolo

./: Cargo.toml  README.md
src/: call.rs  cli.yaml  estimate.rs  main.rs
tests/: TestSiteSimulation.ods  alt.fa  bulk.alt-ref-cov.tsv  bulk.bam  bulk.bam.bai  bulk.nt-cov.tsv  candidates.bcf  expected-out_ADO-fdr-ev.tsv  expected-out_ADO_0-04.bcf  expected-out_fdr-ev.tsv  expected-out_omit-indels.bcf  pos.tsv  prosolo-test-sim.yaml  ref.fa  ref.fa.amb  ref.fa.ann  ref.fa.bwt  ref.fa.fai  ref.fa.pac  ref.fa.sa  simulation-input.tsv  simulation-output.csv  simulation_haplotypes.txt  single-cell.alt-ref-cov.tsv  single-cell.bam  single-cell.bam.bai  single-cell.nt-cov.tsv  test-control-fdr-ev.rs  test-single-cell-bulk.rs  tests-sim.bash
tests/control-fdr-tests/: alt-prob-sum-above-one_test-sites.thresholds.tsv  alt-prob-sum-above-zero_test-sites.vcf  expected-out_ALT_filter-0.bcf  expected-out_ALT_filter-one.bcf
