[package]
name = "prosolo"
version = "0.4.0"
authors = ["David Laehnemann <david.laehnemann@hhu.de>"]

[dependencies]
# libprosic = { git = "https://github.com/PROSIC/libprosic", rev = "607b3dc4f3f260e182985763385a0dbecee38e8a" }
libprosic = "0.7"
bio = "0.23"
rust-htslib = "0.22"
clap = {version = "2.24.*", features = ["yaml", "color", "suggestions"]}
log = "0.3.*"
fern = "0.3.*"
csv = "0.14.*"
itertools = "0.4.*"
time = "*"
serde_json = "1.0"

[dev-dependencies]
cli_test_dir = "^0.1"
regex = "^0.2"

[features]
default = []

# Uncomment the following if you need debugging symbols despite compiling for optimised performance with the `--release` flag (e.g. for flamegraphing)
#[profile.release]
#debug = true
